fix background on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -1765,6 +1765,9 @@ $baseurl: '{{ site.baseurl }}/images';
 				background-attachment: scroll;
 			}
 		}
+		#banner .more {
+		  bottom: 30px;
+		}
 	}
 
 /* Footer */
@@ -1901,8 +1904,8 @@ $baseurl: '{{ site.baseurl }}/images';
     position: fixed; 
     top: 0; 
     left: 0; 
-    right: 0; 
-    bottom: 0; 
+    width: 100vw;
+    height: 100vh;
     background-attachment: fixed; 
     background-position: center center; 
     background-repeat: no-repeat; 
@@ -1947,6 +1950,9 @@ $baseurl: '{{ site.baseurl }}/images';
       background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("/images/bg2.jpg"); 
     }
   }
+	body.is-mobile .backpic {
+	  background-attachment: scroll;
+	}
   .clean_links a {
     border-bottom: 0;
   }
